--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 		</div>
 		<div class="container texto_ban">
 			<div class="row">
-				<div class="col-xs-2">
+				<div class="col-xs-2 col-xd-offset-1">
 					<div class="logo">OPEN/HOUSE</div>
 					<br><br><br><br>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 cont_text" >
+				<div class="col-xs-6 col-xd-offset-1 cont_text" >
 					<h5>PÁGINA EN DESARROLLO</h5>
 					<span class="linea"></span>
 					<h1>Experiencia</h1>
@@ -66,5 +66,10 @@
 		</div>
 	</div>
 	
+	<div class="container contenido_gen">
+		<div class="row center-xs">
+			<div class="col-xs-10 col-md-10 col-lg-10 "></div>
+		</div>
+	</div>
 </body>
 </html>
