desarrollo contenido medio

--- a/index.html
+++ b/index.html
@@ -67,9 +67,28 @@
 	</div>
 	
 	<div class="container contenido_gen">
-		<div class="row center-xs">
-			<div class="col-xs-10 col-md-10 col-lg-10 "></div>
+		<div class="row cont">
+			<div class="col-xs-8 blanc_cont1" ></div>
+			<div class="col-xs-4 blanc_cont"></div>
 		</div>
+		<div class="row cont between-xs">
+			<div class="col-xs-6 cont_text" >
+				<span class="linea2"></span>
+				<h1>Quienes <strong>Somos?</strong></h1>
+				<br>
+				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+				</p>
+				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+				</p>
+			</div>
+			<div class="col-xs-4  cua_cont"></div>
+		</div>
+		<div class="row between-xs">
+			<div class="col-xs-7">
+				<button id="btn_comp">MAS DE LA COMPAÑIA</button>
+			</div>
+			<div class="col-xs-4 blanc_cont">col3 3</div>
+		</div>	
 	</div>
 </body>
 </html>
