--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 			<div class="col-xs-6 cont_text" >
 				<span class="linea2"></span>
 				<h1>Quienes <strong>Somos?</strong></h1>
-				<br>
+				<br><br>
 				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
 				</p>
 				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
 				</p>
+				
 			</div>
 			<div class="col-xs-4  cua_cont"></div>
 		</div>
@@ -87,8 +88,14 @@
 			<div class="col-xs-7">
 				<button id="btn_comp">MAS DE LA COMPAÑIA</button>
 			</div>
-			<div class="col-xs-4 blanc_cont">col3 3</div>
-		</div>	
+			<div class="col-xs-4 blanc_cont"></div>
+		</div>
+		<div class="row">
+			<div class="img_somos">
+				<img src="imagenes/casa_somos.jpg" alt="">
+			</div>
+		</div>
+		
 	</div>
 </body>
 </html>
