--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 		</div>
 		<div class="container texto_ban">
 			<div class="row">
-				<div class="col-xs-2">
+				<div class="col-xs-2 col-xd-offset-1">
 					<div class="logo">OPEN/HOUSE</div>
 					<br><br><br><br>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 cont_text" >
+				<div class="col-xs-6 col-xd-offset-1 cont_text" >
 					<h5>PÁGINA EN DESARROLLO</h5>
 					<span class="linea"></span>
 					<h1>Experiencia</h1>
@@ -66,5 +66,36 @@
 		</div>
 	</div>
 	
+	<div class="container contenido_gen">
+		<div class="row cont">
+			<div class="col-xs-8 blanc_cont1" ></div>
+			<div class="col-xs-4 blanc_cont"></div>
+		</div>
+		<div class="row cont between-xs">
+			<div class="col-xs-6 cont_text" >
+				<span class="linea2"></span>
+				<h1>Quienes <strong>Somos?</strong></h1>
+				<br><br>
+				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+				</p>
+				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+				</p>
+				
+			</div>
+			<div class="col-xs-4  cua_cont"></div>
+		</div>
+		<div class="row between-xs">
+			<div class="col-xs-7">
+				<button id="btn_comp">MAS DE LA COMPAÑIA</button>
+			</div>
+			<div class="col-xs-4 blanc_cont"></div>
+		</div>
+		<div class="row">
+			<div class="img_somos">
+				<img src="imagenes/casa_somos.jpg" alt="">
+			</div>
+		</div>
+		
+	</div>
 </body>
 </html>
