desarrollo - quienes somos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 	<div class="container contenido_gen">
 		<div class="row cont">
 			<div class="col-xs-8 blanc_cont1" ></div>
-			<div class="col-xs-4 blanc_cont"></div>
+			<div class="col-xs-4 blanc_cont">
+				
+			</div>
 		</div>
 		<div class="row cont between-xs">
 			<div class="col-xs-6 cont_text" >
@@ -82,7 +84,10 @@
 				</p>
 				
 			</div>
-			<div class="col-xs-4  cua_cont"></div>
+			<div class="col-xs-4  cua_cont">
+				<img src="imagenes/casa_somos.jpg" alt="">
+				<div class="cuad"></div>
+			</div>
 		</div>
 		<div class="row between-xs">
 			<div class="col-xs-7">
