--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scale=1">
-<title>Venta de Lotes</title>
+<title>OPEN-HOUSE</title>
 <link rel="stylesheet" href="css/flexboxgrid.min.css">
 <link rel="stylesheet" href="css/estilos.css">
 <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
