--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-6 col-xd-offset-1 cont_text" >
-					<h5>PÁGINA EN DESARROLLO</h5>
+					<h5>DESARROLLA TUS SUEÑOS</h5>
 					<span class="linea"></span>
 					<h1>Experiencia</h1>
 					<label>en un solo lugar!</label>
