Edicion - quienes somos2

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
 				</p>
 				
 			</div>
-			<div class="col-xs-4  cua_cont"></div>
+			<div class="col-xs-4  cua_cont">
+				<img src="imagenes/casa_somos.jpg" alt="">
+				<div class="cua_cont"></div>
+			</div>
 		</div>
 		<div class="row between-xs">
 			<div class="col-xs-7">
@@ -91,10 +94,15 @@
 			<div class="col-xs-4 blanc_cont"></div>
 		</div>
 		<div class="row">
+			<div class="col-xs-7"></div>
+			<div class="col-xs-4"></div>
+		</div>
+		<div class="row">
 			<div class="img_somos">
 				<img src="imagenes/casa_somos.jpg" alt="">
 			</div>
 		</div>
+		
 		
 	</div>
 </body>
