--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="col-xs-4 blanc_cont"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-7"></div>
+			<div class="col-xs-6 barra_smos"></div>
 			<div class="col-xs-4"></div>
 		</div>
 		<div class="row">
@@ -103,7 +103,19 @@
 			</div>
 		</div>
 		
-		
+	</div>
+	<div class="container fras_cont">
+		<div class="row">
+			<div class="col-xs-1"></div>
+			<div class="col-xs-11 fondo_fras">
+				<div class="frase">
+					<span>"</span>
+					<label>Frase Hola Mundo Frase Hola Mundo</label>
+					<h3>AUTOR FRASE</h3>
+				</div>
+				
+			</div>
+		</div>
 	</div>
 </body>
 </html>
