--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	
 	<div class="container menu">
-		<div class="row">
+		<div class="row fila_menu">
 			<div class="menu-botones col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4">
-				<div class="row middle-lg" >
+				<div class="row middle-xs" >
 					<div class=" botons col-lg-2 col-md-2"><a href="#">HOME</a></div>
 					<div class=" botons col-lg-2 col-md-2"><a href="#">COMPANY</a></div>
 					<div class=" botons col-lg-3 col-md-3"><a href="#">PRODUCT & SERVICES</a></div>
@@ -25,6 +25,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="container banner">
 		<div class="row center-xs">
 			<div class="col-lg-11 col-md-11">
@@ -76,7 +77,7 @@
 				<span class="linea2"></span>
 				<h1>Quienes <strong>Somos?</strong></h1>
 				<br><br>
-				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
+				<p><strong>Estudia</strong> lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
 				</p>
 				<p>lorem ....... texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto
 				</p>
@@ -98,14 +99,15 @@
 			<div class="col-xs-4"></div>
 		</div>
 		<div class="row">
-			<div class="img_somos">
+			<div class="col-xs-6 img_somos">
 				<img src="imagenes/casa_somos.jpg" alt="">
 			</div>
 		</div>
 		
 	</div>
+
 	<div class="container fras_cont">
-		<div class="row">
+		<div class="row frass_fila">
 			<div class="col-xs-1"></div>
 			<div class="col-xs-11 fondo_fras">
 				<div class="frase">
@@ -113,9 +115,74 @@
 					<label>Frase Hola Mundo Frase Hola Mundo</label>
 					<h3>AUTOR FRASE</h3>
 				</div>
-				
+			</div>
+		</div>
+		<div class="row frass_fila">
+			<div class="col-xs-12 testimonios">
+				<a href="#">VER TODOS LOS TESTIMONIOS</a>
 			</div>
 		</div>
 	</div>
+
+	<div class="container prod_serv">
+		<div class="row fila1">
+			<div class="col-xs-12 fond_serv">
+				<p>MAESTRO DE CONSTRUCCIÓN</p>
+				<h2>Products & Services</h2>
+			</div>
+		</div>
+		<div class="row fila2 center-xs">
+				<div class="col-xs-6 linea_ps"></div>
+			</div>
+		<div class="row fila2">
+			<div class="col-xs-12 fond_serv_bln"></div>
+		</div>
+		
+		<div class="row fila2 casas_opciones">
+			<div class="col-xs-4">
+				<div class="casas">
+					<div class="imagenes_casas"><img src="imagenes/casa1.jpg"></div>
+					<div class="marco">
+						<h2>Casa-Tradicional</h2>
+						<p>SISTEMAS MODERNOS</p>
+					</div>
+					<div class="icono_pers"></div>
+				</div>
+			</div>
+			<div class="col-xs-4">
+				<div class="casas">
+					<div class="imagenes_casas"><img src="imagenes/casa2.jpg"></div>
+					<div class="marco">
+						<h2>Casa-Familiar</h2>
+						<p>PLATAFORMAS COMODOS</p>
+					</div>
+					<div class="icono_pers"></div>
+				</div>
+			</div>
+			<div class="col-xs-4">
+				<div class="casas">
+					<div class="imagenes_casas"><img src="imagenes/casa3.jpg"></div>
+					<div class="marco">
+						<h2>Casa-Campo</h2>
+						<p>PERSONALIZADO</p>
+					</div>
+					<div class="icono_pers"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row end-xs fila2">
+			<div class="col-xs-2 linea3"></div>
+			<div class="col-xs-1"></div>
+		</div>
+	</div>
+
+	<footer class="container footer_cont">
+		<div class="row center-xs fila2">
+			<div class="col-xs-2 logo_footer"><h2>OPEN/HOME</h2></div>
+		</div>
+		<div class="row fila2">
+			<div class="col-xs-12 conten_foo"></div>
+		</div>
+	</footer>
 </body>
 </html>
