--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 	
 	<div class="container menu">
-		<div class="row fila_menu">
-			<div class="menu-botones col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4">
+		<div class="row fila_menu end-xs top-xs end-sm ">
+			<div class="menu-botones col-lg-8 col-md-8 col col-sm-8">
 				<div class="row middle-xs" >
-					<div class=" botons col-lg-2 col-md-2"><a href="#">HOME</a></div>
-					<div class=" botons col-lg-2 col-md-2"><a href="#">COMPANY</a></div>
-					<div class=" botons col-lg-3 col-md-3"><a href="#">PRODUCT & SERVICES</a></div>
-					<div class=" botons col-lg-2 col-md-2"><a href="#">CONTACT</a></div>
-					<div class="col-lg-3 col-md-3 redes">999 - 000 - 999</div>
+					<div class=" botons col-sm-2 col-xs-3"><a href="#">HOME</a></div>
+					<div class=" botons col-sm-2 col-xs-3"><a href="#">COMPANY</a></div>
+					<div class=" botons col-xs-3"><a href="#">PRODUCT & SERVICES</a></div>
+					<div class=" botons col-sm-2 col-xs-3"><a href="#">CONTACT</a></div>
+					<div class="col-sm-3 col-xs-12 redes"><img src="imagenes/cel2.png" class="cel"><strong>999 - 999 - 999</strong></div>
 				</div>
 				
 			</div>
@@ -48,14 +48,14 @@
 			<div class="col-xs-9  barra_ban"></div>
 		</div>
 		<div class="container texto_ban">
-			<div class="row">
-				<div class="col-xs-2 col-xd-offset-1">
+			<div class="row top-xs">
+				<div class="col-sm-2">
 					<div class="logo">OPEN/HOUSE</div>
 					<br><br><br><br>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-6 col-xd-offset-1 cont_text" >
+				<div class="col-sm-6 cont_text" >
 					<h5>PÁGINA EN DESARROLLO</h5>
 					<span class="linea"></span>
 					<h1>Experiencia</h1>
@@ -69,11 +69,11 @@
 	
 	<div class="container contenido_gen">
 		<div class="row cont">
-			<div class="col-xs-8 blanc_cont1" ></div>
-			<div class="col-xs-4 blanc_cont"></div>
+			<div class="col-sm-8 col-xs-12 blanc_cont1" ></div>
+			<div class="col-sm-4 col-xs-12 blanc_cont"></div>
 		</div>
-		<div class="row cont between-xs">
-			<div class="col-xs-6 cont_text" >
+		<div class="row cont between-sm">
+			<div class="col-xs-12 col-sm-6 cont_text" >
 				<span class="linea2"></span>
 				<h1>Quienes <strong>Somos?</strong></h1>
 				<br><br>
@@ -83,23 +83,23 @@
 				</p>
 				
 			</div>
-			<div class="col-xs-4  cua_cont">
+			<div class=" col-xs-0 col-sm-4  cua_cont">
 				<img src="imagenes/casa_somos.jpg" alt="">
 				<div class="cua_cont"></div>
 			</div>
 		</div>
-		<div class="row between-xs">
-			<div class="col-xs-7">
+		<div class="row between-sm">
+			<div class="col-xs-12 col-sm-7">
 				<button id="btn_comp">MAS DE LA COMPAÑIA</button>
 			</div>
-			<div class="col-xs-4 blanc_cont"></div>
+			<div class="col-sm-4 blanc_cont"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6 barra_smos"></div>
-			<div class="col-xs-4"></div>
+			<div class="col-xs-12 col-sm-6 barra_smos"></div>
+			<div class="col-xs-0 col-sm-4"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6 img_somos">
+			<div class="col-xs-12 col-sm-6 img_somos">
 				<img src="imagenes/casa_somos.jpg" alt="">
 			</div>
 		</div>
@@ -139,7 +139,7 @@
 		</div>
 		
 		<div class="row fila2 casas_opciones">
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-sm-4">
 				<div class="casas">
 					<div class="imagenes_casas"><img src="imagenes/casa1.jpg"></div>
 					<div class="marco">
@@ -149,7 +149,7 @@
 					<div class="icono_pers"></div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-sm-4">
 				<div class="casas">
 					<div class="imagenes_casas"><img src="imagenes/casa2.jpg"></div>
 					<div class="marco">
@@ -159,7 +159,7 @@
 					<div class="icono_pers"></div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-sm-4">
 				<div class="casas">
 					<div class="imagenes_casas"><img src="imagenes/casa3.jpg"></div>
 					<div class="marco">
@@ -180,9 +180,17 @@
 		<div class="row center-xs fila2">
 			<div class="col-xs-2 logo_footer"><h2>OPEN/HOME</h2></div>
 		</div>
-		<div class="row fila2">
-			<div class="col-xs-12 conten_foo"></div>
+		
+		<div class="row fila2 center-xs conten_foo" >
+			<div class="col-xs-1 botonsf"><a href="#">HOME</a></div>
+			<div class="col-xs-1 botonsf"><a href="#">COMPANY</a></div>
+			<div class="col-xs-2 botonsf"><a href="#">PRODUCT & SERVICES</a></div>
+			<div class="col-xs-1 botonsf"><a href="#">GALLERY</a></div>
+			<div class="col-xs-1 botonsf"><a href="#">CONTACT</a></div>
+			<div class="col-xs-2 redes2"><img src="imagenes/cel.png" class="cel"><strong>999 - 999 - 999</strong></div>
 		</div>
+		<hr>
+		<p class="derec_foo">&copy; 2019 J. Arturo Diaz C. /<span> arturdiazcahuana123@gmail.com. </span>Copyrights & Todos los derechos reservados</p>
 	</footer>
 </body>
 </html>
